[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Font/Memogram2.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/Font/Memogram3.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/sprites/button-small-1.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/button-small-2.png" type="Texture" id=4]
[ext_resource path="res://scripts/options.gd" type="Script" id=5]
[ext_resource path="res://assets/sprites/checked-box.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/unchecked-box.png" type="Texture" id=7]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 0.85098 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( -704, 72 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1920.0
margin_bottom = 101.0
custom_fonts/font = ExtResource( 1 )
text = "Options"
align = 1

[node name="FullScreenCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer"]
margin_top = 105.0
margin_right = 1920.0
margin_bottom = 182.0
custom_fonts/font = ExtResource( 2 )
custom_icons/checked = ExtResource( 6 )
custom_icons/unchecked = ExtResource( 7 )
text = " Fullscreen"

[node name="MuteCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer"]
margin_top = 186.0
margin_right = 1920.0
margin_bottom = 263.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
custom_icons/checked = ExtResource( 6 )
custom_icons/unchecked = ExtResource( 7 )
text = " Mute Audio"

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 267.0
margin_right = 1920.0
margin_bottom = 347.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TextureButton"]
margin_right = 131.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 2 )
text = "Done"
align = 1
valign = 1

[connection signal="toggled" from="MarginContainer/VBoxContainer/FullScreenCheckBox" to="." method="_on_FullScreenCheckBox_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/MuteCheckBox" to="." method="_on_MuteCheckBox_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
